created styles.css. Added content, header, and sidebar to index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lab 1 - Home</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Justin Basdeo</h1>
+    <div class="header">
+       <h1>Justin Basdeo</h1>
+       <ul>
+           <li>
+               <a href="index.html">Home</a>
+           </li>
+           <li>
+               <a href="blog.html">Blog</a>
+           </li>
+       </ul> 
+    </div>
+    <div class="main">
+        <div class="content">
+            <p>
+                I recently encountered a visual bug where the style
+                I was attempting to apply to an SVG element just wasn’t
+                working. My first instinct when debugging a tricky 
+                styling issue is to fire up Chrome Dev Tools and attempt
+                a sanity-test. I usually start by setting the misbehaving 
+                element to a noisy and ugly CSS color value like ‘blue’ or 
+                ‘red’ and examine any clues.
+            </p>
+
+        </div>
+        <div class="sidebar">
+            <p>
+                What started as a hashtag charity campaign evidently 
+                transformed into a much larger project.
+            </p>
+            <p>
+                Given Eric’s prolific work on CSS, it was proposed that 
+                the hex-value #663399, a shade of purple, be aliased to 
+                “beccapurple.”
+            </p>
+        </div>
+    </div>
+    
 </body>
 </html>
